Referral site prototype done

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: rgb(61, 61, 114);
 
     padding: 2rem 6rem;
 }
@@ -36,7 +37,7 @@
 .gpt3__navbar-links_container p,
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
-    color: #fff;
+    color: rgb(249, 245, 245);
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 18px;
@@ -50,7 +51,7 @@
 .gpt3__navbar-sign button,
 .gpt3__navbar-menu_container button {
     padding: 0.5rem 1rem;
-    color: #fff;
+    color: rgb(248, 242, 242);
     background: #FF4820;
     font-family: var(--font-family);
     font-weight: 500;
